src/app.scss
@use 'base';
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&display=swap');

* {
  margin: 0;
  border: 0;
  box-sizing: border-box;
}

body {
  font-family: 'DM Sans', sans-serif;
  font-size: 18px;
  background-color: base.$background-color;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.body-container {
  display: flex;
  flex-direction: column;
  width: 100vw;
  padding: 0 15px;
  gap: 15px;
}

.balance {
  display: flex;

  .balance__nr {
    float: left;
  }

  .balance__logo {
    float: right;
  }
}

.spending {
  display: flex;
}

.container {
  width: 100%;
  height: 100%;
  padding: 20px;
  border-radius: 10px;
}

// Chart.js
.spending h3 {
  font-size: 24px;
}

.chart {
  max-width: 300px;
  width: 100%;
  height: 250px;
  border: 1px solid red;
  display: flex;
}

.chart__cntr {
  display: flex;
  width: 100%;
  gap: 10px;
  border: 1px solid green;
}

.chart__bar {
  overflow: hidden;
}

.chart__overlay {
  border-radius: 3px;
  background-color: black;
  color: white;
  font-size: 12px;
  font-weight: 700;
  padding: 5px;
  margin-bottom: 5px;
}

.chart__fill--other {
  background-color: base.$primary-color;
  border-radius: 3px;
}

.chart__fill--today {
  background-color: base.$secondary-color;
  border-radius: 3px;
}

.chart__week {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
  width: 100%;
  height: 25px;
  margin-bottom: 10px;
}

.chart__day {
  width: 100%;
  color: base.$main-font-color;
  font-size: 12px;
  text-align: center;
  margin-top: 15px;
}

hr {
  border: 0.7px solid base.$background-color;
  margin-top: 20px;
}

.spending--month {
  display: flex;
  height: 95px;
}

.this-month {
  margin: 20px 0;
  width: 50%;
  
  p {
    color: base.$main-font-color;
    font-size: 16px;
  }

  h2 {
    font-size: 32px;
  }
}

.last-month {
  margin: 20px 0;
  float: right;
  text-align: end;
  width: 50%;
  align-self: flex-end;

  p {
    color: base.$main-font-color;
    font-size: 16px;
  }
}

@media screen and (min-width: 375px) {
  .body-container {
    width: 450px;
  }

  .container {
    padding: 20px 30px;
  }

  .chart {
    min-width: 100%;
  }
}

